--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@ a:focus {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url(../images/bg3.jpg);
+  background-size: cover;
+  background-color: #1f2021;
+  min-height: 100vh;
+  position: relative;
 }
 
 .bg-box {
@@ -290,6 +295,7 @@ a:focus {
 .slider_section #customCarousel1 {
   width: 100%;
   position: unset;
+  z-index: 11;
 }
 .slider_section .detail-box {
   color: #ffffff;
